# matplotlib-extra

./: .gitignore  .pdm.toml  LICENSE  README.md  pyproject.toml
data/: Fig2-2-7.csv  G20.csv
examples/: example.ipynb
src/mpl_extra/: AutofitText.py  TreemapContainer.py  autofit.py  treemap.py
