[project]
name = "matplotlib-extra"
version = "0.1.0"
description = ""
authors = [
    {name = "chenyulue", email = "chenyulue@163.com"},
]
dependencies = [
    "-e file:///${PROJECT_ROOT}#egg=matplotlib-extra",
    "numpy>=1.22.3",
    "pandas>=1.4.2",
    "matplotlib>=3.5.1",
    "squarify>=0.4.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
